Imported https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1304

--- a/kcms/colors/editor/scmeditoroptions.ui
+++ b/kcms/colors/editor/scmeditoroptions.ui
@@ -26,6 +26,20 @@
     </widget>
    </item>
    <item>
+    <widget class="QCheckBox" name="accentActiveTitlebar">
+     <property name="text">
+      <string>Apply a&amp;ccent color to active window titlebars</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QCheckBox" name="accentInactiveTitlebar">
+     <property name="text">
+      <string>Apply acce&amp;nt color to inactive window titlebars</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="QCheckBox" name="shadeSortedColumn">
      <property name="text">
       <string>Shade sorted column &amp;in lists</string>
